Создано с помощью Colaboratory

--- a/tevkina_vera_"Проектная_работа_0_ipynb".ipynb
+++ b/tevkina_vera_"Проектная_работа_0_ipynb".ipynb
@@ -31,78 +31,127 @@
       "source": [
         "# Импорт необходимых библиотек\n",
         "import pandas as pd\n",
-        "\n",
-        "from sqlalchemy import Column, ForeignKey, Integer, String, Text, Date, DateTime\n",
-        "from sqlalchemy.orm import relationship\n",
-        "from sqlalchemy.ext.declarative import declarative_base"
+        "import sqlalchemy as sq\n",
+        "from datetime import datetime                       #ОСТАВИТЬ, ЕСЛИ БУДУ ИСПОЛЬЗОВАТЬ 1 ВАРИАНТ"
       ],
       "metadata": {
         "id": "hAoSxEtn0QIo"
       },
-      "execution_count": 15,
+      "execution_count": 72,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "import sqlalchemy\n",
-        "\n",
-        "with sqlalchemy.create_engine(\n",
-        "\t\"mysql://root:root@localhost:3306/\",\n",
-        "\tisolation_level='AUTOCOMMIT'  #\n",
-        "\t).connect() as connection:\n",
-        "\tconnection.execute('CREATE DATABASE sqlite charset=\"utf8\"')"
-      ],
+      "execution_count": 82,
       "metadata": {
+        "id": "g8AqrUWDa25D",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 553
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "RUVGotXRzrB-",
-        "outputId": "8e39356b-b4a8-4728-9fdd-9af057bc5a38"
+        "outputId": "f5c6eaf8-1e3b-4944-9928-44743554d1d0"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-7b10f0257cbd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m with sqlalchemy.create_engine(\n\u001b[1;32m      4\u001b[0m         \u001b[0;34m\"mysql://root:root@localhost:3306/\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0misolation_level\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'AUTOCOMMIT'\u001b[0m  \u001b[0;31m#\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \t).connect() as connection:\n\u001b[1;32m      7\u001b[0m         \u001b[0mconnection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'CREATE DATABASE sqlite charset=\"utf8\"'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<string>\u001b[0m in \u001b[0;36mcreate_engine\u001b[0;34m(url, **kwargs)\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sqlalchemy/util/deprecations.py\u001b[0m in \u001b[0;36mwarned\u001b[0;34m(fn, *args, **kwargs)\u001b[0m\n\u001b[1;32m    307\u001b[0m                         \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    308\u001b[0m                     )\n\u001b[0;32m--> 309\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    310\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    311\u001b[0m         \u001b[0mdoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__doc__\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__doc__\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sqlalchemy/engine/create.py\u001b[0m in \u001b[0;36mcreate_engine\u001b[0;34m(url, **kwargs)\u001b[0m\n\u001b[1;32m    546\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    547\u001b[0m                 \u001b[0mdbapi_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpop_kwarg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 548\u001b[0;31m         \u001b[0mdbapi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdialect_cls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdbapi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mdbapi_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    549\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    550\u001b[0m     \u001b[0mdialect_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"dbapi\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdbapi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sqlalchemy/dialects/mysql/mysqldb.py\u001b[0m in \u001b[0;36mdbapi\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m    161\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mdbapi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 163\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m__import__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"MySQLdb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mon_connect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'MySQLdb'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "CREATE TABLE example_ (\n",
+            "\tid INTEGER NOT NULL, \n",
+            "\tpost_title VARCHAR(200) NOT NULL, \n",
+            "\tpost_slug VARCHAR(200) NOT NULL, \n",
+            "\tcontent TEXT NOT NULL, \n",
+            "\tcreated_on DATETIME, \n",
+            "\tupdated_on DATETIME, \n",
+            "\tPRIMARY KEY (id)\n",
+            ")\n",
+            "\n",
+            "\n"
+          ]
         }
+      ],
+      "source": [
+        "# Создайте базу данных sqlite, можно использовать sqlalchemy или pandas, или любой другой инструмент\n",
+        "# create_db_0\n",
+        "#CONN = sqlite3.connect('example_0.db')\n",
+        "\n",
+        "#create_example_tab\n",
+        "#cursor.execute('''CREATE TABLE IF NOT EXISTS example_tab_0\n",
+        "#              (Title TEXT, Director TEXT, Year INT)''')\n",
+        "\n",
+        "\n",
+        "\n",
+        "# create_db                                         #ВАРИАНТ ИСПОЛЬЗОВАНИЯ SQLALCHEMY\n",
+        "CONN_1 = sq.create_engine(\"sqlite:///sqlite.db\")    #ЗАМЕНИТЬ НА CONN, ЕСЛИ БУДУ ИСПОЛЬЗОВАТЬ\n",
+        "\n",
+        "#create_example_tab\n",
+        "metadata = sq.MetaData()\n",
+        "\n",
+        "example_ = sq.Table('example_', metadata, \n",
+        "    sq.Column('id', Integer(), primary_key=True),\n",
+        "    sq.Column('post_title', String(200), nullable=False),\n",
+        "    sq.Column('post_slug', String(200),  nullable=False),\n",
+        "    sq.Column('content', Text(), nullable=False),\n",
+        "    sq.Column('created_on', DateTime(), default=datetime.now),\n",
+        "    sq.Column('updated_on', DateTime(), default=datetime.now, onupdate=datetime.now)\n",
+        ")\n",
+        "\n",
+        "#print_example_table\n",
+        "print(CreateTable(example_))\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "id": "g8AqrUWDa25D"
-      },
-      "outputs": [],
       "source": [
         "# Создайте базу данных sqlite, можно использовать sqlalchemy или pandas, или любой другой инструмент\n",
+        "# create_db_0                                         ВАРИАНТ ИСПОЛЬЗОВАНИЯ SQLITE3\n",
+        "import sqlite3\n",
         "\n",
-        "sqlite = declarative_base()\n",
-        "\n"
+        "name_db = 'example_1.db'                            #ПОТОМ ВПИСАТЬ sqlite.db, ЕСЛИ БУДУ ИСПОЛЬЗОВАТЬ\n",
+        "CONN = sqlite3.connect(name_db)\n",
+        "\n",
+        "\n",
+        "#create_example_tab\n",
+        "cursor = CONN.cursor()                              #ВЫПОЛНЯТОР КОМАНД НА СТОРОНЕ СУБД\n",
+        "\n",
+        "sql_create = '''CREATE TABLE IF NOT EXISTS example_tab_1\n",
+        "              (Title TEXT, Director TEXT, Year INT)'''\n",
+        "cursor.execute(sql_create)                          #ПРИМЕР ВЫПОЛНЕНИЯ ВЫПОЛНЯТОРОМ КОМАНДЫ СОЗДАНИЯ БД\n",
+        "\n",
+        "print('DB ' + name_db + ' created')                 #ОТЛОВ ОШИБКИ. УДАЛИТЬ\n",
+        "\n",
+        "CONN.commit()                                       #ПОСЛЕ СОЗДАНИЯ/ИЗМЕНЕНИЯ НАДО НЕ ЗАБЫВАТЬ КОММИТИТЬ\n",
+        "\n",
+        "print('DB commited')                                #ОТЛОВ ОШИБКИ. УДАЛИТЬ\n",
+        "\n",
+        "#show_schema\n",
+        "sql_schema = '''SELECT name FROM sqlite_master  \n",
+        "  WHERE type='table';'''\n",
+        "cursor.execute(sql_schema)                          #ПРИМЕР ВЫПОЛНЕНИЯ ВЫПОЛНЯТОРОМ КОМАНДЫ ПРОСМОТРА СУЩЕСТВУЮЩИХ В БД ТАБЛИЦ\n",
+        "print(cursor.fetchall())\n",
+        "\n",
+        "#close_db\n",
+        "#CONN.close()                                       #ПОСЛЕ ВЫПОЛНЕНИЯ ВСЕХ ОБРАЩЕНИЙ К БД, ЕЕ НАДО ЗАКРЫТЬ"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QiWPqJM5CvC9",
+        "outputId": "1a27380b-8fc8-41ec-8e82-3eb2ee493399"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DB example_1.db created\n",
+            "DB commited\n",
+            "[('example_tab_1',), ('example_tab_0',)]\n"
+          ]
+        }
       ]
     },
     {
