Создано с помощью Colaboratory

--- a/tevkina_vera_"Проектная_работа_0_ipynb".ipynb
+++ b/tevkina_vera_"Проектная_работа_0_ipynb".ipynb
@@ -37,12 +37,12 @@
       "metadata": {
         "id": "hAoSxEtn0QIo"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "g8AqrUWDa25D",
         "colab": {
@@ -141,7 +141,7 @@
         "id": "QiWPqJM5CvC9",
         "outputId": "1a27380b-8fc8-41ec-8e82-3eb2ee493399"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,14 +165,57 @@
         "# и методом Timeseries Endpoint! Строго им. Где start_date = end_date = date\n",
         "# Используйте параметры start_date, end_date, base=EUR, symbols=USD, format=csv\n",
         "\n",
-        "def extract_currency(date):\n",
-        "  pass"
+        "\n",
+        "import requests\n",
+        "\n",
+        "\n",
+        "#time-series data\n",
+        "#url = 'https://api.exchangerate.host/timeseries?start_date=2022-10-23&end_date=2022-10-23&base=EUR&symbols=USD&format=csv'\n",
+        "#url = 'https://api.exchangerate.host/timeseries?start_date=2022-10-23&end_date=2022-10-23&base=EUR&symbols=USD'\n",
+        "#url = 'https://api.exchangerate.host/timeseries?start_date=2022-10-22&end_date=2022-10-22&base=EUR'\n",
+        "#response = requests.get(url)\n",
+        "#data = response.json()\n",
+        "\n",
+        "#print(data)\n",
+        "        \n",
+        "#convert\n",
+        "#url = 'https://api.exchangerate.host/convert?from=USD&to=EUR'\n",
+        "#response = requests.get(url)\n",
+        "#data = response.json()\n",
+        "\n",
+        "#print(data)\n",
+        "        \n",
+        "#def extract_currency(date):\n",
+        "#  date=str(input())                                         #ОТЛОВ ОШИБКИ. УДАЛИТЬ         \n",
+        "#  url = 'https://api.exchangerate.host/timeseries?start_date='+date+'&end_date='+date+'&base=EUR&symbols=USD'\n",
+        "#  return url\n",
+        "\n",
+        "\n",
+        "#  pass\n",
+        "##print(extract_currency('2022-10-23'))                      #ОТЛОВ ОШИБКИ. УДАЛИТЬ\n",
+        "\n",
+        "response = requests.get(url)\n",
+        "data = response.json()\n",
+        "\n",
+        "print(data)                                                #ОТЛОВ ОШИБКИ. УДАЛИТЬ"
       ],
       "metadata": {
-        "id": "WN5AxNjudXrP"
+        "id": "WN5AxNjudXrP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8de16a66-116b-4076-c0c0-f45f512fed6b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'motd': {'msg': 'If you or your company use this project or like what we doing, please consider backing us so we can continue maintaining and evolving this project.', 'url': 'https://exchangerate.host/#/donate'}, 'success': True, 'timeseries': True, 'base': 'EUR', 'start_date': '2022-10-23', 'end_date': '2022-10-23', 'rates': {'2022-10-23': {'USD': 0.985696}}}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -192,6 +235,9 @@
         "\n",
         "# ссылка на гитхаб с файлами - https://github.com/dm-novikov/stepik_airflow_course/tree/main/data_new\n",
         "\n",
+        "# видео-пример\n",
+        "https://stepik.org/lesson/584022/step/3?unit=578792\n",
+        "\n",
         "def extract_data(date):\n",
         "  pass"
       ],
@@ -200,6 +246,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Новый раздел"
+      ],
+      "metadata": {
+        "id": "3Vh_8PIVrjs2"
+      }
     },
     {
       "cell_type": "code",
